--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="container">
     <div class="container-card">
       
-        <p class="title-container">A   D  V  I C  E #117</p>
+        <p class="title-container">A D  V  I C  E # 1 1 7</p>
         <p class="main-content">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis delectus, dolorum eius quaerat iure quod. A fuga, ipsum temporibus"</p>
       
       <img src="./images/pattern-divider-desktop.svg" class="divider" alt="divider">
@@ -25,10 +25,5 @@
       </button>
     </div>
   </section>
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
