JS functional, random msg according ID

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <section class="container">
     <div class="container-card">
       
-        <p class="title-container">A D  V  I C  E # 1 1 7</p>
-        <p class="main-content">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis delectus, dolorum eius quaerat iure quod. A fuga, ipsum temporibus"</p>
+        <p class="title-container"></p>
+        <p class="main-content"></p>
       
       <img src="./images/pattern-divider-desktop.svg" class="divider" alt="divider">
       <button class="dice-container">
@@ -25,5 +25,6 @@
       </button>
     </div>
   </section>
+  <script src="./index.js"></script>
 </body>
 </html>
